syntax = "proto3";

package ru.spbau;

message Connect {
    string name = 1;
}

message Message {
    string name = 1;
    string message = 2;
}

message Empty { }

service ProtoChat {
    rpc SendMessage(Message) returns (Empty) { }
    rpc ReceiveMessage(Empty) returns (stream Message) { }
}
